--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <hr>
         <div class="socials_icons">
-            <a href="https://t.me/+wpWTOKUdgjgxNzky#" class="telegram">
+            <a href="https://t.me/+wpWTOKUdgjgxNzky" class="telegram">
                 <span class="icon_telegram">
                     <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
                     width="60" height="60"
